@@ -4,13 +4,16 @@
 \title{R2admb News}
 \encoding{UTF-8}
 
-\section{Changes in version 0.7.3}{
+\section{Changes in version 0.7.4}{
   \itemize{
     \item major changes to modularity: exposed compile_admb, run_admb,
     read_admb
     \item changes to clean_admb
     \item improved logic for retrieving profile and MCMC parameter names
-  in read_admb; run_admb writes .mcinfo file to disk
+    in read_admb; run_admb writes .mcinfo file to disk
+    \item write_dat complains if class is not matrix or factor
+    \item exposed confint.admb
+    \item read_pars reads full std matrix (attempt at back-compatibility)
 }}
 
 \section{Changes in version 0.7.2}{
